--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <canvas id="canvas1"></canvas>
     <div id="debug">text here</div>
-<!--testug-->
+<!--testug---->
     <script src="bird.js"></script>
     <script src="particles.js"></script>
     <script src="obstacles.js"></script>
