--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body><div><h3>SPACE for å fly, enter for å restarte</h3></div>
     <canvas id="canvas1"></canvas>
     <div id="debug">text here</div>
 <!--testug---->
