--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body><div><h3>SPACE for å fly, enter for å restarte</h3></div>
     <canvas id="canvas1"></canvas>
     <div id="debug">text here</div>
-<!--testug---->
+<!--testug----->
     <script src="bird.js"></script>
     <script src="particles.js"></script>
     <script src="obstacles.js"></script>
