--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body><div><h3>SPACE for å fly, enter for å restarte</h3></div>
     <canvas id="canvas1"></canvas>
+    <div>Updated with lock on 60fps</div>
     <div id="debug">text here</div>
 <!--testug----->
     <script src="bird.js"></script>
