--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <canvas id="canvas1"></canvas>
     <div>Updated with lock on 60fps</div>
     <div id="debug">text here</div>
+    <div id="infoscreen"></div>
 <!--testug----->
     <script src="bird.js"></script>
     <script src="particles.js"></script>
