--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <canvas id="canvas1"></canvas>
     <div>Updated with lock on 60fps</div>
     <div id="debug">text here</div>
-    <div id="infoscreen"></div>
+    <div id="infoscreen">
+        <p>Want to play flappy ?</p>
+        <button id="yesbtn" >YES</button>
+
+    </div>
 <!--testug----->
     <script src="bird.js"></script>
     <script src="particles.js"></script>
