--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <script src="particles.js"></script>
     <script src="obstacles.js"></script>
     <script src="main.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.6.3.min.js"
+    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
+    crossorigin="anonymous"></script>
+
+
 
 </body>
 </html>
