adjusted css for infoscreen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <canvas id="canvas1"></canvas>
     <div>Updated with lock on 60fps</div>
     <div id="debug">text here</div>
-    <div id="infoscreen">
+    <div id="infoscreen" class="infoscreen open">
         <p>Want to play flappy ?</p>
         <button id="yesbtn" >YES</button>
 
