--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <div>Updated with lock on 60fps</div>
     <div id="debug">text here</div>
     <div id="infoscreen" class="infoscreen open">
-        <p>Want to play flappy ?</p>
-        <button id="yesbtn" >YES</button>
+        <p>play flappy ?</p>
+        <br>
+        <button id="yesbtn" style="background-color:#00ffcc;color:black;border-radius:5px;border:1px solid black">Start Flappy</button>
+        <br>
+        <p>Previous Best Score: <div id="highscore">0</div></p>
 
     </div>
 <!--testug----->
