--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="infoscreen" class="infoscreen open">
         <div><p>play flappy ?</p></div>
         <br>
-        <button id="yesbtn" style="background-color:#00ffcc;color:black;border-radius:5px;border:1px solid black">Start Flappy</button>
+        <button id="yesbtn" style="background-color:#00ffcc;color:black;border-radius:5px;border:1px solid black;font-size:20px;font-weight:800">Start Flappy</button>
         <br>
-        <div><p>Previous Best Score: <div id="highscore">0</div></p></div>
+        <div><h2>Best Score: <div id="highscore">0</div></h2></div>
 
     </div>
 <!--testug----->
